--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   },
   "engines": {
     "node": ">=14.6.0"
+  },
+  "devDependencies": {
+    "fs": "^0.0.1-security",
+    "pg": "^8.9.0"
   }
 }
