--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "highlight.js": "^11.7.0",
+    "markdown-it": "^13.0.1",
     "next": "^13.1.1",
     "openai": "^3.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.6"
   },
   "engines": {
     "node": ">=14.6.0"
